Fix layout misalignment

--- a/src/components/PrayerTimeList/prayerTimeList.module.css
+++ b/src/components/PrayerTimeList/prayerTimeList.module.css
@@ -34,8 +34,13 @@
 	/* grid-row-gap: 1px;
 	grid-column-gap: 1px; */
 	grid-template-columns: repeat(auto-fill, minmax(var(--minmaxval), 1fr));
-	margin-left: 20%;
-	margin-right: 20%;
+	margin-left: 12%;
+	margin-right: 12%;
+}
+@media screen and (min-width: 320px) and (max-width: 1024px) and (orientation: landscape) {
+	.container ul {
+		grid-row-gap: 16px;
+	}
 }
 @media screen and (min-width: 768px) {
 	/* .container label {
@@ -43,7 +48,7 @@
 		background: blue;
 	} */
 	.container ul {
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(3, 1fr);
 	}
 }
 @media screen and (min-width: 992px) {
